--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
+    <!-- метка для ios чтоб убрать панель, проверить -->
+    <meta name = "apple-mobile-web-app-capable" content= "yes" /> 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -102,7 +104,59 @@
             </section>
         </div>
         <!-- Пятая страница -->
-        <div class="wrapper__page swiper-slide">5</div>
+        <div class="wrapper__page swiper-slide">
+            <section class="plan">
+                <div class="plan__container container">
+                    <div class="plan__row">
+                        <h2 class="plan__title title" data-swiper-parallax="-100">Схема работы</h2>
+                        <div class="plan__content">
+                            <div class="plan__point" data-swiper-parallax="-200">
+                                <p class="plan__number">1</p>
+                                <div class="plan__text">
+                                    <p class="plan__subtitle">Связь с нами</p>
+                                    <p class="plan__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed soluta doloremque expedita labore doloribus iure mollitia ipsam error culpa suscipit, aspernatur ut ipsum, voluptas quo repudiandae quod! Debitis, tempore magni?</p>
+                                </div>
+                            </div>
+                            <div class="plan__point" data-swiper-parallax="-300">
+                                <p class="plan__number">2</p>
+                                <div class="plan__text">
+                                    <p class="plan__subtitle">Составление макета</p>
+                                    <p class="plan__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed soluta doloremque expedita labore doloribus iure mollitia ipsam error culpa suscipit, aspernatur ut ipsum, voluptas quo repudiandae quod! Debitis, tempore magni?</p>
+                                </div>
+                            </div>
+                            <div class="plan__point" data-swiper-parallax="-400">
+                                <p class="plan__number">3</p>
+                                <div class="plan__text">
+                                    <p class="plan__subtitle">Верстка сайта</p>
+                                    <p class="plan__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed soluta doloremque expedita labore doloribus iure mollitia ipsam error culpa suscipit, aspernatur ut ipsum, voluptas quo repudiandae quod! Debitis, tempore magni?</p>
+                                </div>
+                            </div>
+                            <div class="plan__point" data-swiper-parallax="-500">
+                                <p class="plan__number">4</p>
+                                <div class="plan__text">
+                                    <p class="plan__subtitle">Покупка домена и хостинга</p>
+                                    <p class="plan__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed soluta doloremque expedita labore doloribus iure mollitia ipsam error culpa suscipit, aspernatur ut ipsum, voluptas quo repudiandae quod! Debitis, tempore magni?</p>
+                                </div>
+                            </div>
+                            <div class="plan__point" data-swiper-parallax="-600">
+                                <p class="plan__number">5</p>
+                                <div class="plan__text">
+                                    <p class="plan__subtitle">Тестирование сайта</p>
+                                    <p class="plan__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed soluta doloremque expedita labore doloribus iure mollitia ipsam error culpa suscipit, aspernatur ut ipsum, voluptas quo repudiandae quod! Debitis, tempore magni?</p>
+                                </div>
+                            </div>
+                            <div class="plan__point" data-swiper-parallax="-700">
+                                <p class="plan__number">6</p>
+                                <div class="plan__text">
+                                    <p class="plan__subtitle">Окончательная оценка работы и оплата</p>
+                                    <p class="plan__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed soluta doloremque expedita labore doloribus iure mollitia ipsam error culpa suscipit, aspernatur ut ipsum, voluptas quo repudiandae quod! Debitis, tempore magni?</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
         <!-- Шестая страница -->
         <div class="wrapper__page swiper-slide">6</div>
         <!-- Седьмая страница -->
@@ -145,6 +199,7 @@
     <!-- Подключаем попап -->
     <script src="js/popup.js"></script>
     <!--Подключаем файл JS скриптов-->
+    <script src="js/smooth-scrollbar.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
