--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
                         <div class="plan__content">
                             <div class="plan__point" data-swiper-parallax="-200">
                                 <p class="plan__number">1</p>
-                                <div class="plan__text">
+                                <div class="plan__text akkordeon">
                                     <p class="plan__subtitle">Связь с нами</p>
-                                    <p class="plan__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed soluta doloremque expedita labore doloribus iure mollitia ipsam error culpa suscipit, aspernatur ut ipsum, voluptas quo repudiandae quod! Debitis, tempore magni?</p>
+                                    <p class="plan__description plan__description_1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed soluta doloremque expedita labore doloribus iure mollitia ipsam error culpa suscipit, aspernatur ut ipsum, voluptas quo repudiandae quod! Debitis, tempore magni?</p>
                                 </div>
                             </div>
                             <div class="plan__point" data-swiper-parallax="-300">
