--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="reviews__row">
                         <h2 class="reviews__title title" data-swiper-parallax="-100">Отзывы реальных заказчиков</h2>
                         <div class="reviews__content" data-swiper-parallax="-200">
-                            <div class="reviews__words words swiper-container swiper-no-swiping">
+                            <div class="reviews__words words swiper-container">
                                 <div class="words__wrap swiper-wrapper">
                                     <div class="words__slide swiper-slide">
                                         <p class="words__name">Никита</p>
