--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
                                     <a href="https://yandex.ru/" target="_blank" class="portfolio__screen portfolio__screen_ya"></a>
                                 </div>
                             </div>
+                            <div class="portfolio__btn-prev swiper-button-prev"></div>
+                            <div class="portfolio__btn-next swiper-button-next"></div>
                         </div>
                     </div>
                 </div>
