--- a/index.html
+++ b/index.html
@@ -32,7 +32,23 @@
         <!-- Вторая страница -->
         <div class="wrapper__page swiper-slide">
             <section class="advantages">
-                
+                <div class="advantages__container container">
+                    <div class="advantages__row">
+                        <h2 class="advantages__title title" data-swiper-parallax="-100">Наши преимущества</h2>
+                        <div class="advantages__tabs">
+                            <nav class="advantages__items" data-swiper-parallax="-500">
+                                <div class="advantages__icon advantages__icon_monitor active"></div>
+                                <div class="advantages__icon advantages__icon_like"></div>
+                                <div class="advantages__icon advantages__icon_presentation"></div>
+                            </nav>
+                            <div class="advantages__text" data-swiper-parallax="-1000">
+                                <p class="advantages__description active" id="tab_1">№1 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere distinctio quidem cupiditate in ex obcaecati aliquam officia quia aperiam omnis corporis nobis magni magnam provident voluptatem, ipsam perferendis unde. Modi, animi. Nemo possimus laborum id illum veritatis asperiores, voluptatibus quos.</p>
+                                <p class="advantages__description" id="tab_2">№2 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam blanditiis necessitatibus maxime assumenda cumque cupiditate. Odit nemo deserunt cumque. Facere vel iusto sapiente non enim rerum nesciunt accusantium. Magnam eligendi architecto enim! Velit eum facere pariatur expedita inventore eaque consequatur.</p>
+                                <p class="advantages__description" id="tab_3">№3 Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio similique ad adipisci totam architecto nam earum porro. Facere exercitationem dignissimos rerum nostrum culpa, placeat quae eos, hic, sint tempore aliquam. Voluptatem deserunt libero consequatur cumque illum nemo eligendi quod facere.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
         </div>
         <!-- Третья страница -->
@@ -162,7 +178,7 @@
         <!-- Седьмая страница -->
         <div class="wrapper__page swiper-slide">7</div>
     </div>
-    <div class="wrapper__menu swiper-pagination"></div>
+    <!-- <div class="wrapper__menu swiper-pagination"></div> -->
 </div>
 
 <div class="popup" id="popup">
