--- a/index.html
+++ b/index.html
@@ -174,7 +174,9 @@
             </section>
         </div>
         <!-- Шестая страница -->
-        <div class="wrapper__page swiper-slide">6</div>
+        <div class="wrapper__page swiper-slide">
+            
+        </div>
         <!-- Седьмая страница -->
         <div class="wrapper__page swiper-slide">7</div>
     </div>
