--- a/index.html
+++ b/index.html
@@ -175,13 +175,90 @@
         </div>
         <!-- Шестая страница -->
         <div class="wrapper__page swiper-slide">
-            
+            <section class="price" data-swiper-parallax="-500">
+                <div class="price__container container">
+                    <div class="price__row">
+                        <div class="price__body">
+                            <div class="price__slider swiper-container">
+                                <div class="price__wrap swiper-wrapper">
+                                    <div class="price__slide swiper-slide">
+                                        <h2 class="price__title title">Цены</h2>
+                                        <div class="price__content">
+                                            <div class="price__column">
+                                                <div class="price__card card">
+                                                    <div class="card__row">
+                                                        <h3 class="card__title">Визитка</h3>
+                                                        <ul class="card__list">
+                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
+                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
+                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
+                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
+                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
+                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
+                                                        </ul>
+                                                        <p class="card__price"><s>15.000</s><span> 7.000 руб.</span></p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="price__column">
+                                                <div class="price__card card">
+                                                    <div class="card__row">
+                                                        <h3 class="card__title">Лендинг</h3>
+                                                        <ul class="card__list">
+                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
+                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
+                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
+                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
+                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
+                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
+                                                        </ul>
+                                                        <p class="card__price"><s>15.000</s><span> 10.000 руб.</span></p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="price__column">
+                                                <div class="price__card card">
+                                                    <div class="card__row">
+                                                        <h3 class="card__title">Верстка макета</h3>
+                                                        <ul class="card__list">
+                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
+                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
+                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
+                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
+                                                        </ul>
+                                                        <p class="card__price card__price_b">По договоренности</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="price__column">
+                                                <div class="price__card card">
+                                                    <div class="card__row">
+                                                        <h3 class="card__title">Доработки сайта</h3>
+                                                        <ul class="card__list">
+                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
+                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
+                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
+                                                        </ul>
+                                                        <p class="card__price card__price_b">По договоренности</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
         <!-- Седьмая страница -->
         <div class="wrapper__page swiper-slide">7</div>
     </div>
     <!-- <div class="wrapper__menu swiper-pagination"></div> -->
 </div>
+
+
 
 <div class="popup" id="popup">
     <div class="popup__body">                                
