--- a/index.html
+++ b/index.html
@@ -76,43 +76,47 @@
                 </div>
             </section>
         </div>
-        <!-- Четвертая страница -->
+        <!-- Отзывы -->
         <div class="wrapper__page swiper-slide">
             <section class="reviews">
                 <div class="reviews__container container">
                     <div class="reviews__row">
                         <h2 class="reviews__title title" data-swiper-parallax="-100">Отзывы реальных заказчиков</h2>
                         <div class="reviews__content" data-swiper-parallax="-200">
-                            <div class="reviews__words words swiper-container">
-                                <div class="words__wrap swiper-wrapper">
-                                    <div class="words__slide swiper-slide">
-                                        <p class="words__name">Никита</p>
-                                        <p class="words__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem alias assumenda consequatur aspernatur quo autem quis molestias? Nihil, odit rerum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, numquam quasi eligendi asperiores magni laudantium autem saepe enim aut perferendis, ad itaque sit deleniti adipisci!</p>
-                                    </div>
-                                    <div class="words__slide swiper-slide">
-                                        <p class="words__name">Роман</p>
-                                        <p class="words__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate sint totam in quia assumenda tenetur, voluptates quidem vel obcaecati, corporis soluta inventore sapiente perferendis distinctio! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, vel.</p>
-                                    </div>
-                                    <div class="words__slide swiper-slide">
-                                        <p class="words__name">Вини</p>
-                                        <p class="words__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptates impedit officia facere, dolorem repudiandae, maiores neque deleniti fugit inventore cupiditate culpa dolore sunt! Placeat iure nihil dolor temporibus quae.</p>
+                            <div class="reviews__column reviews__column_w">
+                                <div class="reviews__words words swiper-container">
+                                    <div class="words__wrap swiper-wrapper">
+                                        <div class="words__slide swiper-slide">
+                                            <p class="words__name">Никита</p>
+                                            <p class="words__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem alias assumenda consequatur aspernatur quo autem quis molestias? Nihil, odit rerum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, numquam quasi eligendi asperiores magni laudantium autem saepe enim aut perferendis, ad itaque sit deleniti adipisci!</p>
+                                        </div>
+                                        <div class="words__slide swiper-slide">
+                                            <p class="words__name">Роман</p>
+                                            <p class="words__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate sint totam in quia assumenda tenetur, voluptates quidem vel obcaecati, corporis soluta inventore sapiente perferendis distinctio! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, vel.</p>
+                                        </div>
+                                        <div class="words__slide swiper-slide">
+                                            <p class="words__name">Вини</p>
+                                            <p class="words__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptates impedit officia facere, dolorem repudiandae, maiores neque deleniti fugit inventore cupiditate culpa dolore sunt! Placeat iure nihil dolor temporibus quae.</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="reviews__photos photos swiper-container">
-                                <div class="photos__wrap swiper-wrapper">
-                                    <div class="photos__slide swiper-slide">
-                                        <img src="img/nik.jpg" alt="">
+                            <div class="reviews__column reviews__column_ph">
+                                <div class="reviews__photos photos swiper-container">
+                                    <div class="photos__wrap swiper-wrapper">
+                                        <div class="photos__slide swiper-slide">
+                                            <img src="img/nik.jpg" alt="">
+                                        </div>
+                                        <div class="photos__slide swiper-slide">
+                                            <img src="img/rom.jpg" alt="">
+                                        </div>
+                                        <div class="photos__slide swiper-slide">
+                                            <img src="img/vini.jpg" alt="">
+                                        </div>
                                     </div>
-                                    <div class="photos__slide swiper-slide">
-                                        <img src="img/rom.jpg" alt="">
-                                    </div>
-                                    <div class="photos__slide swiper-slide">
-                                        <img src="img/vini.jpg" alt="">
-                                    </div>
+                                    <div class="photos__button-prev swiper-button-prev"></div>
+                                    <div class="photos__button-next swiper-button-next"></div>
                                 </div>
-                                <div class="photos__button-prev swiper-button-prev"></div>
-                                <div class="photos__button-next swiper-button-next"></div>
                             </div>
                         </div>
                     </div>
