--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="wrapper swiper-container">
     <div class="wrapper__bg parallax-bg" style="background-image:url(img/bg.jpg)" data-swiper-parallax="-23%"></div>
     <div class="wrapper__slider swiper-wrapper">
-        <!-- Главная страница -->
+        <!-- Главная -->
         <div class="wrapper__page swiper-slide">
             <section class="wrapper__main main">
                 <div class="main__container container">
@@ -29,7 +29,7 @@
             </section>
         </div>
 
-        <!-- Вторая страница -->
+        <!-- Преимущества -->
         <div class="wrapper__page swiper-slide">
             <section class="advantages">
                 <div class="advantages__container container">
@@ -51,7 +51,7 @@
                 </div>
             </section>
         </div>
-        <!-- Третья страница -->
+        <!-- Портфолио -->
         <div class="wrapper__page swiper-slide">
             <section class="portfolio">
                 <div class="portfolio__container container">
@@ -123,7 +123,7 @@
                 </div>
             </section>
         </div>
-        <!-- Пятая страница -->
+        <!-- Схема -->
         <div class="wrapper__page swiper-slide">
             <section class="plan">
                 <div class="plan__container container">
@@ -177,7 +177,7 @@
                 </div>
             </section>
         </div>
-        <!-- Шестая страница -->
+        <!-- Цены -->
         <div class="wrapper__page swiper-slide">
             <section class="price" data-swiper-parallax="-500">
                 <div class="price__container container">
@@ -256,8 +256,51 @@
                 </div>
             </section>
         </div>
-        <!-- Седьмая страница -->
-        <div class="wrapper__page swiper-slide">7</div>
+        <!-- Контакты -->
+        <div class="wrapper__page swiper-slide">
+            <section class="contacts">
+                <div class="contacts__container container">
+                    <div class="contacts__row">
+                        <h2 class="contacts__title title" data-swiper-parallax="-500">Контакты</h2>
+                        <div class="contacts__content" data-swiper-parallax="-1000">
+                            <div class="contacts__column">
+                                <div class="contacts__body">
+                                    <form action="mail.php" method="POST" class="contacts__form form-contacts">
+                                        <h3 class="form-contacts__title">Оставьте заявку на обратную связь</h3>
+                                        <div class="form-contacts__item">
+                                            <input type="text" class="form-contacts__name" name="user_name" placeholder="Имя:" required>
+                                        </div>
+                                        <div class="form-contacts__item">
+                                            <input type="tel" id="phone_1" class="form-contacts__phone" name="user_phone" placeholder="Телефон:" required>
+                                        </div>
+                                        <!-- <div class="form-contacts__item">
+                                            <textarea rows="2" class="form-contacts__comment" name="user_comment" placeholder="Ваш вопрос (если есть):"></textarea>
+                                        </div> -->
+                                        <div class="form-contacts__item">
+                                            <input id="agree" type="checkbox" checked class="form-contacts__checkbox" required>
+                                            <label for="agree" class="form-contacts__privacy"><span>Согласен(-на) на <a href="privacy.html">обработку персональных данных</a></span></label>
+                                        </div>
+                                        <div class="form-contacts__item">
+                                            <button class="form-contacts__button">Отправить</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                            <div class="contacts__column">
+                                <div class="contacts__body">
+                                    <div class="contacts__list">
+                                        <!-- <p class="contacts__contact"><img src="img/phone.svg" alt="">+7 (926) 367-64-09</p> -->
+                                        <p class="contacts__contact"><img src="img/whatsapp.svg" alt="">+7 (926) 367-64-09</p>
+                                        <p class="contacts__contact"><img src="img/telegram.svg" alt="">@mitrokhin_max</p>
+                                        <p class="contacts__contact"><img src="img/gmail.svg" alt="">mitrohmax@gmail.com</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
     </div>
     <!-- <div class="wrapper__menu swiper-pagination"></div> -->
 </div>
@@ -298,7 +341,6 @@
     <!-- Подключаем попап -->
     <script src="js/popup.js"></script>
     <!--Подключаем файл JS скриптов-->
-    <script src="js/smooth-scrollbar.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
