--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                                 <div class="contacts__body">
                                     <div class="contacts__list">
                                         <!-- <p class="contacts__contact"><img src="img/phone.svg" alt="">+7 (926) 367-64-09</p> -->
-                                        <p class="contacts__contact"><img src="img/whatsapp.svg" alt="">+7 (926) 367-64-09</p>
+                                        <p class="contacts__contact"><img src="img/whatsapp.svg" alt="">+7 (926) <w>367</w>-64-09</p>
                                         <p class="contacts__contact"><img src="img/telegram.svg" alt="">@mitrokhin_max</p>
                                         <p class="contacts__contact"><img src="img/gmail.svg" alt="">mitrohmax@gmail.com</p>
                                     </div>
