--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="wrapper swiper-container">
-    <div class="wrapper__bg parallax-bg" style="background-image:url(img/bg.jpg)" data-swiper-parallax="-23%"></div>
+    <div class="wrapper__bg parallax-bg" style="background-image:url(img/bg-3.svg)" data-swiper-parallax="-23%"></div>
     <div class="wrapper__slider swiper-wrapper">
         <!-- Главная -->
         <div class="wrapper__page swiper-slide">
@@ -41,9 +41,9 @@
                                 <div class="advantages__icon advantages__icon_presentation"></div>
                             </nav>
                             <div class="advantages__text" data-swiper-parallax="-1000">
-                                <p class="advantages__description active" id="tab_1">№1 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere distinctio quidem cupiditate in ex obcaecati aliquam officia quia aperiam omnis corporis nobis magni magnam provident voluptatem, ipsam perferendis unde. Modi, animi. Nemo possimus laborum id illum veritatis asperiores, voluptatibus quos.</p>
-                                <p class="advantages__description" id="tab_2">№2 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam blanditiis necessitatibus maxime assumenda cumque cupiditate. Odit nemo deserunt cumque. Facere vel iusto sapiente non enim rerum nesciunt accusantium. Magnam eligendi architecto enim! Velit eum facere pariatur expedita inventore eaque consequatur.</p>
-                                <p class="advantages__description" id="tab_3">№3 Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio similique ad adipisci totam architecto nam earum porro. Facere exercitationem dignissimos rerum nostrum culpa, placeat quae eos, hic, sint tempore aliquam. Voluptatem deserunt libero consequatur cumque illum nemo eligendi quod facere.</p>
+                                <p class="advantages__description active" id="tab_1">Выгодные цены. Минимальная цена нашего продукта составляет 7.000 рублей, а учитывая акции, которые регулярно проходят у нас, цена может быть еще ниже. Такую ценовую политику мы можем поддерживать, благодаря оптимизации затрат на собственные нужды: мы не арендуем офис, все сотрудники работают удаленно, в нашем штате минимальное количество работающих людей, которые справляются со своими задачами, и мы очень мало тратим на рекламные источники, так как расширяем базу клиентов не торопясь.</p>
+                                <p class="advantages__description" id="tab_2">Тщательный анализ вашего бизнеса и конкурентов. Благодаря аналитике вашей деятельности, мы создаем сайты с максимально подробным и качественным описанием, что дает вашему клиенту ясное понимание об услуге или товаре, и это натолкнет его на заказ.</p>
+                                <p class="advantages__description" id="tab_3">Рост продаж. 10 из 10 заказчиков, спустя максимум неделю после запуска органического трафика на свои лендинги, заявляли об увеличении количества заявок, что говорит о продающей способности наших сайтов. Для нас главная цель - это не просто создать сайт, чтобы он был, а сделать так, чтобы он принес заказчику прибыль.</p>
                             </div>
                         </div>
                     </div>
@@ -59,13 +59,16 @@
                         <div class="portfolio__slider swiper-container" data-swiper-parallax="-200">
                             <div class="portfolio__wrap swiper-wrapper">
                                 <div class="portfolio__slide swiper-slide">
-                                    <a href="https://vtorsheb.ru/" target="_blank" class="portfolio__screen portfolio__screen_vsh"></a>
+                                    <a href="https://vtorsheb.ru/" target="_blank" class="portfolio__screen"><img src="img/1.jpg" alt=""></a>
                                 </div>
                                 <div class="portfolio__slide swiper-slide">
-                                    <a href="https://remwoodwind.ru/" target="_blank" class="portfolio__screen portfolio__screen_rww"></a>
+                                    <a href="https://remwoodwind.ru/" target="_blank" class="portfolio__screen"><img src="img/2.jpg" alt=""></a>
                                 </div>
                                 <div class="portfolio__slide swiper-slide">
-                                    <a href="https://yandex.ru/" target="_blank" class="portfolio__screen portfolio__screen_ya"></a>
+                                    <a href="https://mitrokhin-max.github.io/safecontract" target="_blank" class="portfolio__screen"><img src="img/3.jpg" alt=""></a>
+                                </div>
+                                <div class="portfolio__slide swiper-slide">
+                                    <a href="https://mitrokhin-max.github.io/rhea" target="_blank" class="portfolio__screen"><img src="img/3.jpg" alt=""></a>
                                 </div>
                             </div>
                             <div class="portfolio__btn-prev swiper-button-prev"></div>
