--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="wrapper swiper-container">
-    <div class="wrapper__bg parallax-bg" style="background-image:url(img/bg-3.svg)" data-swiper-parallax="-23%"></div>
+    <div class="wrapper__bg parallax-bg" style="background-image:url(img/bg-final.svg)" data-swiper-parallax="-23%"></div>
     <div class="wrapper__slider swiper-wrapper">
         <!-- Главная -->
         <div class="wrapper__page swiper-slide">
