--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="wrapper swiper-container">
-    <div class="wrapper__bg parallax-bg" style="background-image:url(img/bg-final.svg)" data-swiper-parallax="-23%"></div>
+    <div class="wrapper__bg parallax-bg" style="background-image:url(img/bg-final-r.svg)" data-swiper-parallax="-23%"></div>
     <div class="wrapper__slider swiper-wrapper">
         <!-- Главная -->
         <div class="wrapper__page swiper-slide">
@@ -164,13 +164,6 @@
                                 <p class="plan__number">5</p>
                                 <div class="plan__text">
                                     <p class="plan__subtitle">Тестирование сайта</p>
-                                    <p class="plan__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed soluta doloremque expedita labore doloribus iure mollitia ipsam error culpa suscipit, aspernatur ut ipsum, voluptas quo repudiandae quod! Debitis, tempore magni?</p>
-                                </div>
-                            </div>
-                            <div class="plan__point" data-swiper-parallax="-700">
-                                <p class="plan__number">6</p>
-                                <div class="plan__text">
-                                    <p class="plan__subtitle">Окончательная оценка работы и оплата</p>
                                     <p class="plan__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed soluta doloremque expedita labore doloribus iure mollitia ipsam error culpa suscipit, aspernatur ut ipsum, voluptas quo repudiandae quod! Debitis, tempore magni?</p>
                                 </div>
                             </div>
