--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div class="main__row">
                         <h1 class="main__title" data-swiper-parallax="-100">Веб-разработка сайтов для малого и большого бизнеса</h1>
                         <h2 class="main__subtitle" data-swiper-parallax="-200">Увеличь прибыль своего бизнеса уже сегодня</h2>
-                        <p class="main__text" data-swiper-parallax="-300">Пока твои конкуренты успешно продают в сети, ты теряешь клиентов, которым мог бы продать товар или услугу лучше, чем у них</p>
+                        <p class="main__text" data-swiper-parallax="-300">Пока твои конкуренты успешно продают в сети, ты теряешь клиентов, которым мог бы продать товар или услугу лучше, чем у своих коллег</p>
                         <div class="main__button" data-swiper-parallax="-400">
                             <a href="#popup" class="main__link popup-link">Оставить заявку</a>
                         </div>
@@ -41,9 +41,18 @@
                                 <div class="advantages__icon advantages__icon_presentation"></div>
                             </nav>
                             <div class="advantages__text" data-swiper-parallax="-1000">
-                                <p class="advantages__description active" id="tab_1">Выгодные цены. Минимальная цена нашего продукта составляет 7.000 рублей, а учитывая акции, которые регулярно проходят у нас, цена может быть еще ниже. Такую ценовую политику мы можем поддерживать, благодаря оптимизации затрат на собственные нужды: мы не арендуем офис, все сотрудники работают удаленно, в нашем штате минимальное количество работающих людей, которые справляются со своими задачами, и мы очень мало тратим на рекламные источники, так как расширяем базу клиентов не торопясь.</p>
-                                <p class="advantages__description" id="tab_2">Тщательный анализ вашего бизнеса и конкурентов. Благодаря аналитике вашей деятельности, мы создаем сайты с максимально подробным и качественным описанием, что дает вашему клиенту ясное понимание об услуге или товаре, и это натолкнет его на заказ.</p>
-                                <p class="advantages__description" id="tab_3">Рост продаж. 10 из 10 заказчиков, спустя максимум неделю после запуска органического трафика на свои лендинги, заявляли об увеличении количества заявок, что говорит о продающей способности наших сайтов. Для нас главная цель - это не просто создать сайт, чтобы он был, а сделать так, чтобы он принес заказчику прибыль.</p>
+                                <div class="advantages__description active" id="tab_1">
+                                    <h3 class="advantages__subtitle">Выгодные цены.</h3>
+                                    <p class="advantages__words">Минимальная цена нашего продукта составляет 7.000 рублей, а учитывая акции, которые регулярно проходят у нас, цена может быть еще ниже. Такой ценовой политики мы можем придерживаться, благодаря оптимизации затрат на собственные нужды: мы не арендуем офис, все сотрудники работают удаленно, а также в нашем штате работает минимальное количество профессионалов, которые справляются со своими задачами.</p>
+                                </div>
+                                <div class="advantages__description" id="tab_2">
+                                    <h3 class="advantages__subtitle">Тщательный анализ вашего бизнеса и конкурентов.</h3> 
+                                    <p class="advantages__words">Благодаря аналитике вашей деятельности, мы создаем сайты с максимально подробным и качественным описанием, что дает вашему клиенту ясное понимание об услуге или товаре, и это натолкнет его на заказ.</p>    
+                                </div>
+                                <div class="advantages__description" id="tab_3">
+                                    <h3 class="advantages__subtitle">Рост продаж.</h3>
+                                    <p class="advantages__words">10 из 10 заказчиков, спустя максимум неделю после запуска органического трафика на свои лендинги, заявляли об увеличении количества заявок, что говорит о продающей способности наших сайтов. Для нас главная цель - это не просто создать сайт, чтобы он был, а сделать так, чтобы он принес заказчику прибыль.</p>    
+                                </div>
                             </div>
                         </div>
                     </div>
