--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                                     <a href="https://mitrokhin-max.github.io/rhea" target="_blank" class="portfolio__screen"><img src="img/3.jpg" alt=""></a>
                                 </div>
                             </div>
-                            <div class="portfolio__btn-prev swiper-button-prev"></div>
-                            <div class="portfolio__btn-next swiper-button-next"></div>
+                            <div class="portfolio__btn-prev"><img src="img/left.svg" alt=""></div>
+                            <div class="portfolio__btn-next"><img src="img/right.svg" alt=""></div>
                         </div>
                     </div>
                 </div>
@@ -125,8 +125,8 @@
                                             <img src="img/vini.jpg" alt="">
                                         </div>
                                     </div>
-                                    <div class="photos__button-prev swiper-button-prev"></div>
-                                    <div class="photos__button-next swiper-button-next"></div>
+                                    <div class="photos__button-prev"><img src="img/left.svg" alt=""></div>
+                                    <div class="photos__button-next"><img src="img/right.svg" alt=""></div>
                                 </div>
                             </div>
                         </div>
@@ -144,35 +144,35 @@
                             <div class="plan__point" data-swiper-parallax="-200">
                                 <p class="plan__number">1</p>
                                 <div class="plan__text akkordeon">
-                                    <p class="plan__subtitle">Связь с нами</p>
+                                    <p class="plan__subtitle">Консультация</p>
                                     <p class="plan__description plan__description_1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed soluta doloremque expedita labore doloribus iure mollitia ipsam error culpa suscipit, aspernatur ut ipsum, voluptas quo repudiandae quod! Debitis, tempore magni?</p>
                                 </div>
                             </div>
                             <div class="plan__point" data-swiper-parallax="-300">
                                 <p class="plan__number">2</p>
                                 <div class="plan__text">
-                                    <p class="plan__subtitle">Составление макета</p>
+                                    <p class="plan__subtitle">Анализ бизнеса</p>
                                     <p class="plan__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed soluta doloremque expedita labore doloribus iure mollitia ipsam error culpa suscipit, aspernatur ut ipsum, voluptas quo repudiandae quod! Debitis, tempore magni?</p>
                                 </div>
                             </div>
                             <div class="plan__point" data-swiper-parallax="-400">
                                 <p class="plan__number">3</p>
                                 <div class="plan__text">
-                                    <p class="plan__subtitle">Верстка сайта</p>
+                                    <p class="plan__subtitle">Создание макета</p>
                                     <p class="plan__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed soluta doloremque expedita labore doloribus iure mollitia ipsam error culpa suscipit, aspernatur ut ipsum, voluptas quo repudiandae quod! Debitis, tempore magni?</p>
                                 </div>
                             </div>
                             <div class="plan__point" data-swiper-parallax="-500">
                                 <p class="plan__number">4</p>
                                 <div class="plan__text">
-                                    <p class="plan__subtitle">Покупка домена и хостинга</p>
+                                    <p class="plan__subtitle">Верстка сайта</p>
                                     <p class="plan__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed soluta doloremque expedita labore doloribus iure mollitia ipsam error culpa suscipit, aspernatur ut ipsum, voluptas quo repudiandae quod! Debitis, tempore magni?</p>
                                 </div>
                             </div>
                             <div class="plan__point" data-swiper-parallax="-600">
                                 <p class="plan__number">5</p>
                                 <div class="plan__text">
-                                    <p class="plan__subtitle">Тестирование сайта</p>
+                                    <p class="plan__subtitle">Посадка сайта на хостинг</p>
                                     <p class="plan__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed soluta doloremque expedita labore doloribus iure mollitia ipsam error culpa suscipit, aspernatur ut ipsum, voluptas quo repudiandae quod! Debitis, tempore magni?</p>
                                 </div>
                             </div>
